# Catan

./: .gitignore  CMakeLists.txt  README.md  TODO.md
assets/pics/: Game components, game bits, game pieces _ Settlements (plastic version) - Family_ Catan - Board games.html
config/: config.hpp
savedGames/: game1.txt
src/: main.cpp
src/Game/: Game.cpp  Game.hpp  GameAssetsData.hpp  GameData.hpp  GameSyncData.hpp
src/Player/: Player.cpp  Player.hpp
src/States/: State.hpp
src/States/AddPlayerState/: AddPlayerState.cpp  AddPlayerState.hpp
src/States/ExchangeCardsState/: ExchangeCardsState.cpp  ExchangeCardsState.hpp
src/States/GameEndState/: GameEndState.cpp  GameEndState.hpp
src/States/GameState/: FieldBuildHelper.cpp  FieldBuildHelper.hpp  GameState.cpp  GameState.hpp
src/States/StartMenuState/: StartMenuState.cpp  StartMenuState.hpp
src/actions/: FunAction.hpp
src/actions/ActionMachine/: ActionMachine.cpp  ActionMachine.hpp
src/actions/BuildGameFigure/: BuildGameFigure.cpp  BuildGameFigure.hpp
src/actions/CalculateLongestStreet/: CalculateLongestStreet.cpp  CalculateLongestStreet.hpp
src/actions/ChooseCorner/: ChooseCorner.cpp  ChooseCorner.hpp
src/actions/ChooseSprite/: ChooseSprite.cpp  ChooseSprite.hpp
src/actions/EarnRawMaterials/: EarnRawMaterials.cpp  EarnRawMaterials.hpp
src/actions/PassToNextPlayer/: PassToNextPlayer.cpp  PassToNextPlayer.hpp
src/actions/PlayerChooseGameFigure/: PlayerChooseGameFigure.cpp  PlayerChooseGameFigure.hpp
src/actions/ShowAndBuildSettelment/: ShowAndBuildSettelment.cpp  ShowAndBuildSettelment.hpp
src/actions/ShowAndBuildStreet/: ShowAndBuildStreet.cpp  ShowAndBuildStreet.hpp
src/actions/ShowDiceRolls/: ShowDiceRolls.cpp  ShowDiceRolls.hpp
src/actions/ShowPlayerOptions/: ShowPlayerOptions.cpp  ShowPlayerOptions.hpp
src/actions/ShowRollDiceButton/: ShowRollDiceButton.cpp  ShowRollDiceButton.hpp
src/components/BankCards/RawMaterial/: RawMaterial.cpp  RawMaterial.hpp
src/components/BankCards/TrendCard/: TrendCard.cpp  TrendCard.hpp
src/components/Button/: Button.cpp  Button.hpp
src/components/CardsList/: CardsList.cpp  CardsList.hpp
src/components/Chip/: Chip.cpp  Chip.hpp
src/components/Corner/: Corner.cpp  Corner.hpp
src/components/Dice/: Dice.cpp  Dice.hpp
src/components/Display/: Display.cpp  Display.hpp
src/components/Field/: Field.cpp  Field.hpp
src/components/GameFigure/: GameFigure.cpp  GameFigure.hpp
src/components/PhotoWithCheckButton/: PhotoWithCheckButton.cpp  PhotoWithCheckButton.hpp
src/components/PhotoWithCheckButtonList/: PhotoWithCheckButtonList.cpp  PhotoWithCheckButtonList.hpp
src/components/PhotoWithCounter/: PhotoWithCounter.cpp  PhotoWithCounter.hpp
src/components/PhotoWithDescription/: PhotoWithDescription.cpp  PhotoWithDescription.hpp
src/components/PhotosWithCounterList/: PhotosWithCounterList.cpp  PhotosWithCounterList.hpp
src/components/Raeuber/: Raeuber.cpp  Raeuber.hpp
src/components/TextBox/: TextBox.cpp  TextBox.hpp
src/helpers/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/helpers/InputManager/: InputManager.cpp  InputManager.hpp
src/helpers/StateManager/: StateManager.cpp  StateManager.hpp
src/types/: Color.hpp  FieldType.hpp  FigureType.hpp  ProbabilityLevel.hpp  RawMaterialType.hpp  TrendCardType.hpp
